--- a/gb/21/12/22/n13453120.md
+++ b/gb/21/12/22/n13453120.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vagvgy3873/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vagvgy3873/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/vagvgy3873/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vagvgy3873/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/vagvgy3873/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vagvgy3873/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/vagvgy3873/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vagvgy3873/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/vagvgy3873/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vagvgy3873/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/vagvgy3873/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vagvgy3873/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/vagvgy3873/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vagvgy3873/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/vagvgy3873/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vagvgy3873/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/vagvgy3873/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vagvgy3873/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/vagvgy3873/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vagvgy3873/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vagvgy3873/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vagvgy3873/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vagvgy3873/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vagvgy3873/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>分析：明年中美关系难改善 习面临惊涛骇浪</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13224013-GettyImages-1337500315GettyImages-1145827087--600x400.jpg" />
 <h6>多位专家认为，中共破坏性的本质不会改，中美关系也不可能变好。（Chip Somodevilla／Florence Lo-Pool／Getty Images／大纪元合成）
 </h6>
 <hr>
-	<p>【大纪元2021年12月22日讯】（大纪元记者骆亚、宁海钟报导）中共外长<ahref="https://github.com/vagvgy3873/djy/blob/master/gb/tag/%E7%8E%8B%E6%AF%85.md#1">王毅</a>日前谈<ahref="https://github.com/vagvgy3873/djy/blob/master/gb/tag/%E4%B8%AD%E7%BE%8E%E5%85%B3%E7%B3%BB.md#1">中美关系</a>，一边称两国要回归理性，另一边称中共“奉陪到底”。多位专家认为，中共破坏性的本质不改，中美关系不可能改善，目前态势下，<ahref="https://github.com/vagvgy3873/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>明年二十大要三连任将面临惊涛骇浪。</p>
-<p>中共外交部长<ahref="https://github.com/vagvgy3873/djy/blob/master/gb/tag/%E7%8E%8B%E6%AF%85.md#1">王毅</a>2021年12月20日在北京“2021年国际形势与中国外交研讨会”开幕式时讲话，通篇以“个别国家”和“强权”等称谓将<ahref="https://github.com/vagvgy3873/djy/blob/master/gb/tag/%E4%B8%AD%E7%BE%8E%E5%85%B3%E7%B3%BB.md#1">中美关系</a>紧张归咎美国，称美方对中国和中美关系做出战略误判。</p>
+	<p>【大纪元2021年12月22日讯】（大纪元记者骆亚、宁海钟报导）中共外长<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%8E%8B%E6%AF%85.md#1">王毅</a>日前谈<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E7%BE%8E%E5%85%B3%E7%B3%BB.md#1">中美关系</a>，一边称两国要回归理性，另一边称中共“奉陪到底”。多位专家认为，中共破坏性的本质不改，中美关系不可能改善，目前态势下，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>明年二十大要三连任将面临惊涛骇浪。</p>
+<p>中共外交部长<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%8E%8B%E6%AF%85.md#1">王毅</a>2021年12月20日在北京“2021年国际形势与中国外交研讨会”开幕式时讲话，通篇以“个别国家”和“强权”等称谓将<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E7%BE%8E%E5%85%B3%E7%B3%BB.md#1">中美关系</a>紧张归咎美国，称美方对中国和中美关系做出战略误判。</p>
 <p>王毅讲话又点出2022年是尼克松总统访华50周年，认为中美双方应“推动美国对华政策回归理性，推动中美关系重回正轨”。</p>
 <h2>中共本质不变 美中关系回不去</h2>
-<p>21日，<ahref="https://github.com/vagvgy3873/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>淡江大学外交与国际关系学系主任郑钦模在接受大纪元采访时表示，当今的世界格局与当年尼克森总统访华已经大不相同，也与中美签署三个公报时的大环境有很大落差，中共政权不但破坏权力平衡，更威胁区域的安全稳定。</p>
+<p>21日，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>淡江大学外交与国际关系学系主任郑钦模在接受大纪元采访时表示，当今的世界格局与当年尼克森总统访华已经大不相同，也与中美签署三个公报时的大环境有很大落差，中共政权不但破坏权力平衡，更威胁区域的安全稳定。</p>
 <p>郑钦模说，美国持续针对中共不公平的贸易行为加以制裁，推动印太战略与四方会谈（QUAD）对中共进行围堵，组织美英澳AUKUS三国军事联盟，牵制了中共的军事部署。</p>
 <p>据中共官方通稿，王毅在讲话中就中共来年对美态度，继续放出狠话，称“要对话可以，但应当平等”，“要对抗不惧，将奉陪到底”，云云。</p>
 <p>郑钦模认为，美中关系是否能回归正轨关键在中共，只要中共持续蔑视基本人权、迫害宗教信仰、威胁区域安全稳定、破坏以规则为基础的国际秩序，中共必将持续遭到全球民主国家的围堵，美中关系也不可能回归正轨。</p>
 <h2>王毅讲话带软 因中共内部自顾不暇？</h2>
-<p>王毅讲话中硬中也带软，他称，2021年中美应“探索相互尊重、平等交往的新范式”。他又提到<ahref="https://github.com/vagvgy3873/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>与<ahref="https://github.com/vagvgy3873/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>“两次通话”和“首次视频会晤”，表示希望美方“同中方一道探索两个大国的和平共处之道”。</p>
-<p>据公开资讯，<ahref="https://github.com/vagvgy3873/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>政府今年1月上任以来也基本上沿袭了川普（特朗普）政府的对华强硬政策。美国国会两大政党在对待中共的问题上高度一致。尽管此前美国官员们多次表示，美国不希望与中国冲突，并且会谋求建立防止与中国发生冲突的护栏，但上月拜登与习近平视讯通话后，出席会议的白宫国家安全委员会一位高级官员会后说，会谈未能就两国避免在<ahref="https://github.com/vagvgy3873/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>问题上发生冲突建立新的护栏。</p>
+<p>王毅讲话中硬中也带软，他称，2021年中美应“探索相互尊重、平等交往的新范式”。他又提到<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>与<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>“两次通话”和“首次视频会晤”，表示希望美方“同中方一道探索两个大国的和平共处之道”。</p>
+<p>据公开资讯，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>政府今年1月上任以来也基本上沿袭了川普（特朗普）政府的对华强硬政策。美国国会两大政党在对待中共的问题上高度一致。尽管此前美国官员们多次表示，美国不希望与中国冲突，并且会谋求建立防止与中国发生冲突的护栏，但上月拜登与习近平视讯通话后，出席会议的白宫国家安全委员会一位高级官员会后说，会谈未能就两国避免在<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>问题上发生冲突建立新的护栏。</p>
 <p>就王毅的中美关系放软声调的描述，台湾民主基金会副执行长、健行科技大学企业管理学系教授颜建发对大纪元分析说，王毅的说法有一些修改他原来战狼外交的那种挑衅的特色。</p>
 <p>他认为这主要是中共内部遇到问题，尤其当局进行大整改后，整个中国经济下滑。</p>
 <p>不过颜建发也认为王毅所讲的只是一种外交词汇，中美竞争和冲突的升高态势不可能停止。</p>
@@ -73,41 +73,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/9/12/n13228383.md#1">杨威：9?11二十年后 中美关系待重新定义</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/11/2/n13346621.md#1">布林肯就台湾问题警告王毅 专家解读</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/11/2/n13348000.md#1">布林肯会晤王毅 台外交部：美已向我方简报</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/11/14/n13374563.md#1">拜习会前 布林肯和王毅通话 台湾问题分歧大</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/12/n13228383.md#1">杨威：9?11二十年后 中美关系待重新定义</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/11/2/n13346621.md#1">布林肯就台湾问题警告王毅 专家解读</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/11/2/n13348000.md#1">布林肯会晤王毅 台外交部：美已向我方简报</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/11/14/n13374563.md#1">拜习会前 布林肯和王毅通话 台湾问题分歧大</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/21/n11270152.md#1" target="_blank">中共暴政录：支持苏俄入侵中国的中东路事件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488663.md#1" target="_blank">寻获生命真谛 法国医院院长分享修炼感悟</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/14/n9958294.md#1" target="_blank">金剑：中央集权制绝对不是封建社会（之二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/21/n2972092.md#1" target="_blank">修炼者的心声：请支持正义良知  选择美好未来</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/12/15/n13439208.md#1">冬至一阳生 吃什么食物特别迎好运？</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/12/15/n13439755.md#1">【百年真相】秦城奇闻 冯基平被关进自建的监狱</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/12/11/n13431562.md#1">【品读宋词】末世壮歌 文天祥的《酹江月》</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/12/15/n13439826.md#1">【曾国藩·乱世自警】与众不同的财富观</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/12/20/n13449376.md#1">【探索时分】中共不敢打台湾的真实原因（中）</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/12/22/n13453204.md#1">【新闻大家谈】大学英语考党史 学生傻眼</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/12/20/n13448510.md#1">【微视频】新加坡媒体采访彭帅为中共洗地？</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/12/20/n13447219.md#1">探测器首次进入太阳大气层 传回惊人视频</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/12/20/n13447387.md#1">彭帅受访称微博发文被误解 引发热议</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/12/20/n13447326.md#1">彭帅露面否认被性侵 WTA再吁透明调查</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/12/20/n13449122.md#1">病愈复出被问好友王力宏 林书豪当场愣住</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/12/20/n13447910.md#1">王力宏发文道歉 宣布暂时退出演艺圈</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/12/20/n13449250.md#1">王力宏发文道歉 李靓蕾回应媒体“不会告了”</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/12/19/n13446896.md#1">王力宏出事演艺圈遭酸 艺人：乱的是人不是圈子</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/12/21/n13449553.md#1">章子怡与汪峰悄悄退出共同投资公司 引猜测</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/12/18/n13445254.md#1">1种营养素 可能抑制Omicron变种？你经常喝</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/12/21/n13449697.md#1">冬天的排毒菜 一碗大白菜汤养肠胃、补元气</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/12/17/n13444055.md#1">胃癌1大元凶是它？这些发炎食物一定要少吃</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/12/21/n13449965.md#1">黄豆芽、绿豆芽哪个好？这碗豆芽汤解毒、消水肿</a></li>
-<li><a href="https://github.com/vagvgy3873/djy/blob/master/gb/21/12/20/n13448121.md#1">美国龙卷风吹走两名婴儿 双双奇迹生还</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945338.md#1">外国疫情已失控？小粉红煽动回国被恶搞</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vagvgy3873/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vagvgy3873/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/22/n13453120.htm">分析：明年中美关系难改善 习面临惊涛骇浪</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/22/n13453120.htm">分析：明年中美关系难改善 习面临惊涛骇浪</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vagvgy3873/djy/blob/master/gb/21/12/22/n13453120.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vagvgy3873/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vagvgy3873/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vagvgy3873/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vagvgy3873/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vagvgy3873/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vagvgy3873/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vagvgy3873/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vagvgy3873/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vagvgy3873/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/vagvgy3873/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vagvgy3873/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vagvgy3873/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/vagvgy3873/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vagvgy3873/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vagvgy3873/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vagvgy3873/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vagvgy3873/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vagvgy3873/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vagvgy3873/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vagvgy3873/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vagvgy3873/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vagvgy3873/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vagvgy3873/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vagvgy3873/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vagvgy3873/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/12/22/n13453120.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
